SERVER-55389 Bring back ShardingLogging calls to the drop database